crates/sdk-tests/tests/app/using_macro_rules_not_allowed.stderr
error: declaring `macro_rules!` inside `#[app]` is not supported.
 --> $DIR/using_macro_rules_not_allowed.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
