crates/sdk-tests/tests/app/using_macro_rules_not_allowed.rs
use svm_sdk::app;

#[app]
mod App {
    macro_rules! print {
        () => {};
    }
}

fn main() {}
